alignment fixes

--- a/screen/screen.css
+++ b/screen/screen.css
@@ -86,14 +86,12 @@ nav {
 
 h2{
   background-color: #0B3B2E;
-  text-align: center;
   font-size: 2em;
 }
 
 .work-experience,
 .skills,
 .Education {
-  text-align: center;
   padding-top: 0.625em;
   padding-bottom: 1.25em;
 }
@@ -115,7 +113,7 @@ p{
 }
 
 .name{
-  text-align: center;
+  /*text-align: center;*/
   font-size: 1.5em;
 }
 
